# Dyn3d.jl

./: ---HERK_func_G.f90  ---embed_system.f90  --HERK_func_G.f90  --HERK_func_GT.f90  --HERK_func_M.f90  --HERK_func_f.f90  --embed_system.f90  .gitignore  .travis.yml  CMakeLists.txt  HERK_func_G.f90  HERK_func_GT.f90  HERK_func_M.f90  HERK_func_f.f90  HERK_func_gti.f90  HERK_update_joint_qJ.f90  HERK_update_joint_vJ_body_v.f90  HERK_update_system_q.f90  HERK_update_system_vc.f90  Manifest.toml  Project.toml  README.md  REQUIRE  Remaining problem.txt  add_body.f90  add_joint.f90  appveyor.yml  artic_rhs_3d.f90  assemble_system.f90  config_2d_fallobj.f90  config_2d_linkobj.f90  config_2d_linkobj_extended.f90  config_2d_undulate.f90  config_3d_cylindrical.f90  config_3d_hinged.f90  config_3d_prismatic.f90  dyn3d.f90  embed_system.f90  embed_system_init.f90  embed_system_march.f90  (+30 more)
HERK_example/: CMakeLists.txt  HERK_example.rar  README  main.f90  module_constants.f90  module_external_func.f90
Matlab_plot/: HERK_order_verification.m  Matlab_plot.m  artic_movie_3d.asv  artic_movie_3d.m  movie.avi
basic_matrix_operations/: block_lu.f90  gmres.f90  inverse.f90  lu.f90  module_basic_matrix_operations.f90  module_block_lu.f90  ones.f90  write_matrix.f90  xcross.f90  zeros.f90
docs/: make.jl  mkdocs.yml
latest/: index.html  search.html  search_index.js
matlab_plot/: Matlab_plot.m  artic_movie_3d.m
notebook/: 2dLinkobj.ipynb  Dyn3dRun.ipynb  FSI of a pivot-fixed falling plate.ipynb  FSI of passive linked plates.ipynb  Fluid-Structure Interaction of a Falling Circle.ipynb  (+7 more)
(+85 files in other folders)
